tests/suite/snapshots/suite__parse__tests__parse__vardecl06-2.xi.snap
---
source: tests/suite/parse.rs
assertion_line: 22
expression: Snapshot(program)
---
3:1 error:Unexpected token }
