tests/suite/snapshots/suite__parse__tests__parse__vardecl06_2.xi.snap
---
source: tests/suite/parse.rs
expression: Snapshot(program)
---
Error: Syntactic error
   ╭─[tests/parse/vardecl06_2.xi:2:3]
   │
 2 │   x:int[1], _
   ·   ────┬───  
   ·       ╰───── Unexpected length in array type
───╯

