tests/suite/snapshots/suite__parse__tests__parse__vardecl08-2.xi.snap
---
source: tests/suite/parse.rs
assertion_line: 22
expression: Snapshot(program)
---
2:3 error:Unexpected length in array type
