tests/suite/snapshots/suite__parse__tests__parse__vardecl08_2.xi.snap
---
source: tests/suite/parse.rs
expression: Snapshot(program)
---
Error: Syntactic error
   ╭─[tests/parse/vardecl08_2.xi:2:3]
   │
 2 │   x:int[1] = {1}
   ·   ────┬───  
   ·       ╰───── Unexpected length in array type
───╯

