tests/suite/snapshots/suite__parse__tests__parse__while01-1.xi.snap
---
source: tests/suite/parse.rs
assertion_line: 22
expression: Snapshot(program)
---
(()
((f () () ())
    (f1 () () ((while true (f)) (while false (f))))
    (f2 ((b bool)) () ((while b (f))))
    (f3
        ((b1 bool) (b2 bool))
        ()
        ((while (& b1 b2) (f)) (while (| b1 b2) (f))))))
